@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Tue Oct 03 00:35:29 CEST 2006
+// Mon Nov 27 21:14:02 CET 2006
 //
 // (C) 2005 Jb Evain
 //
@@ -92,9 +92,6 @@ namespace Mono.Cecil {
 		{
 			if (value == null)
 				throw new ArgumentNullException ("value");
-
-			if (this.Contains (value))
-				throw new ArgumentException ("Duplicated value");
 
 			Attach (value);
 
